--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@wpackio/scripts": "^6.4.0",
     "postcss": "^8.4.12",
+    "raw-loader": "^4.0.2",
     "sass": "^1.50.1"
   },
   "scripts": {
@@ -15,6 +16,7 @@
     "archive": "wpackio-scripts pack"
   },
   "dependencies": {
-    "@wpackio/entrypoint": "^6.4.0"
+    "@wpackio/entrypoint": "^6.4.0",
+    "three": "^0.148.0"
   }
 }
