--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -31,5 +31,5 @@ jobs:
           # Deploy Options
           REMOTE_PATH: "wp-content/themes/allanpichardo/"
           PHP_LINT: TRUE
-          FLAGS: -azvr
+          FLAGS: -azvr --inplace --delete --exclude=".*"
           CACHE_CLEAR: TRUE
