--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,27 @@ services:
     volumes:
       - redis_data:/data
 
+  theme-init:
+    image: composer:2
+    restart: "no"
+    working_dir: /var/www/html/wp-content/themes/${WP_THEME_SLUG}
+    environment:
+      COMPOSER_CACHE_DIR: /tmp/composer-cache
+    volumes:
+      - ./:/var/www/html/wp-content/themes/${WP_THEME_SLUG}
+      - composer_cache:/tmp/composer-cache
+      - npm_cache:/root/.npm
+    command: >
+      sh -lc "if command -v apk >/dev/null 2>&1; then
+        apk add --no-cache nodejs npm;
+      elif command -v apt-get >/dev/null 2>&1; then
+        apt-get update && apt-get install -y nodejs npm && rm -rf /var/lib/apt/lists/*;
+      else
+        echo 'No supported package manager found in composer image' && exit 1;
+      fi;
+      composer install --no-interaction --prefer-dist;
+      npm install"
+
   wordpress:
     image: ${WORDPRESS_IMAGE}
     restart: unless-stopped
@@ -30,6 +51,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
+      theme-init:
+        condition: service_completed_successfully
     ports:
       - "${WORDPRESS_PORT}:80"
     environment:
@@ -57,6 +80,8 @@ services:
         condition: service_healthy
       wordpress:
         condition: service_started
+      theme-init:
+        condition: service_completed_successfully
     environment:
       WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_USER: ${WORDPRESS_DB_USER}
@@ -84,3 +109,5 @@ volumes:
   db_data:
   redis_data:
   wordpress_data:
+  composer_cache:
+  npm_cache:
