--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     volumes:
       - redis_data:/data
 
-  theme-init:
+  theme-composer:
     image: composer:2
     restart: "no"
     working_dir: /var/www/html/wp-content/themes/${WP_THEME_SLUG}
@@ -31,17 +31,21 @@ services:
     volumes:
       - ./:/var/www/html/wp-content/themes/${WP_THEME_SLUG}
       - composer_cache:/tmp/composer-cache
+    command: >
+      sh -lc "composer install --no-interaction --prefer-dist"
+
+  theme-node:
+    image: node:20-alpine
+    restart: "no"
+    working_dir: /var/www/html/wp-content/themes/${WP_THEME_SLUG}
+    depends_on:
+      theme-composer:
+        condition: service_completed_successfully
+    volumes:
+      - ./:/var/www/html/wp-content/themes/${WP_THEME_SLUG}
       - npm_cache:/root/.npm
     command: >
-      sh -lc "if command -v apk >/dev/null 2>&1; then
-        apk add --no-cache nodejs npm;
-      elif command -v apt-get >/dev/null 2>&1; then
-        apt-get update && apt-get install -y nodejs npm && rm -rf /var/lib/apt/lists/*;
-      else
-        echo 'No supported package manager found in composer image' && exit 1;
-      fi;
-      composer install --no-interaction --prefer-dist;
-      npm install"
+      sh -lc "npm install && npm run build"
 
   wordpress:
     image: ${WORDPRESS_IMAGE}
@@ -51,7 +55,9 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
-      theme-init:
+      theme-composer:
+        condition: service_completed_successfully
+      theme-node:
         condition: service_completed_successfully
     ports:
       - "${WORDPRESS_PORT}:80"
@@ -80,7 +86,9 @@ services:
         condition: service_healthy
       wordpress:
         condition: service_started
-      theme-init:
+      theme-composer:
+        condition: service_completed_successfully
+      theme-node:
         condition: service_completed_successfully
     environment:
       WORDPRESS_DB_HOST: db:3306
